# haskell-servant-cookbook

./: .gitignore  LICENSE  README.md  haskell-servant-cookbook.cabal  package.yaml  stack.yaml
doc/: HelloWorld.md  Https.md  Logger.md  Testing.md
hello/: Main.hs
hello-client/: Main.hs
hello-server/: Main.hs
https-client/: Main.hs
https-server/: Main.hs
lib/: HelloApi.hs  SimpleApi.hs  Util.hs
logger/: Main.hs
persistent/: Main.hs
session/: Main.hs
strongly-typed/: Main.hs  Teenage.hs
strongly-typing/: Main.hs  Teenage.hs
test/: Spec.hs
