name:                haskell-servant-cookbook
version:             0.1.0.0
synopsis:            Haskell Servant Cookbook
description:         Please see README.md
homepage:            https://github.com/algas/haskell-servant-cookbook#readme
license:             BSD3
license-file:        LICENSE
author:              Masahiro Yamauchi
maintainer:          sgt.yamauchi@gmail.com
copyright:           2016 Masahiro Yamauchi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Util
  build-depends:       base
  default-language:    Haskell2010

executable hello
  hs-source-dirs:      hello
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-servant-cookbook
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-servant-cookbook
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/algas/haskell-servant-cookbook
