name:                haskell-servant-cookbook
version:             0.1.0.0
synopsis:            Haskell Servant Cookbook
description:         Please see README.md
homepage:            https://github.com/algas/haskell-servant-cookbook#readme
license:             BSD3
license-file:        LICENSE
author:              Masahiro Yamauchi
maintainer:          sgt.yamauchi@gmail.com
copyright:           2016 Masahiro Yamauchi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     HelloApi
                     , SimpleApi
  build-depends:       base
                     , text
                     , aeson
                     , transformers
                     , http-client
                     , wai
                     , servant
                     , servant-client
                     , servant-server
  default-language:    Haskell2010

executable hello-client
  hs-source-dirs:      hello-client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , aeson
                     , http-client
                     , transformers
                     , servant
                     , servant-client
                     , haskell-servant-cookbook
  default-language:    Haskell2010

executable hello-server
  hs-source-dirs:      hello-server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , aeson
                     , wai
                     , warp
                     , servant
                     , servant-server
                     , haskell-servant-cookbook
  default-language:    Haskell2010

executable logger
  hs-source-dirs:      logger
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , aeson
                     , wai
                     , wai-logger
                     , warp
                     , servant
                     , servant-server
                     , haskell-servant-cookbook
  default-language:    Haskell2010

executable https-client
  hs-source-dirs:      https-client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , aeson
                     , http-client
                     , http-client-tls
                     , transformers
                     , servant
                     , servant-client
                     , haskell-servant-cookbook
  default-language:    Haskell2010

executable https-server
  hs-source-dirs:      https-server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , aeson
                     , wai
                     , warp
                     , warp-tls
                     , servant
                     , servant-server
                     , haskell-servant-cookbook
  default-language:    Haskell2010

executable persistent
  hs-source-dirs:      persistent
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , either
                     , aeson
                     , wai
                     , warp
                     , mtl
                     , monad-logger
                     , resourcet
                     , transformers
                     , persistent
                     , persistent-mysql
                     , persistent-template
                     , servant
                     , servant-server
                     , haskell-servant-cookbook
  default-language:    Haskell2010

executable session
  hs-source-dirs:      session
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , bytestring
                     , aeson
                     , containers
                     , transformers
                     , wai
                     , warp
                     , servant
                     , servant-server
                     , haskell-servant-cookbook
  default-language:    Haskell2010

executable stateful
  hs-source-dirs:      stateful
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , aeson
                     , containers
                     , jwt
                     , time
                     , wai
                     , warp
                     , servant
                     , servant-server
                     , haskell-servant-cookbook
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , transformers
                     , haskell-servant-cookbook
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/algas/haskell-servant-cookbook
